test/bad/loops/for11.px

c = d = 'x'
for c, d in 'a'..'b', 3...4 do
    skip
